--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,1 +1,227 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+p, h1, h4 {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+p {
+  font-size: 22px;
+  font-weight: 200;
+}
+
+h1 {
+  font-size: 32px;
+  margin: 1.2rem 0;
+}
+
+a, h2 {
+  font-family: "Rajdhani", sans-serif;
+}
+
+.space_grotesk {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+.w100, .banner_btn {
+  width: 100%;
+}
+
+.w7 {
+  width: 100%;
+}
+
+.margin, main {
+  margin: 0 102px;
+}
+
+.d-flex, .row_card, ul, nav {
+  display: flex;
+}
+
+.flex_center, .banner_arrow, .banner_text, .banner_info {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex_between, .row_card, nav {
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.flex_end, ul {
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.flex_evenly, .banner_btn {
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.border, main, header {
+  border: 2px solid rgba(188, 187, 189, 0.2823529412);
+}
+
+.test {
+  border: 1px solid #fff;
+}
+
+.test2 {
+  border: 1px solid green;
+}
+
+.test3 {
+  border: 1px solid yellow;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0 102px;
+  height: 30vh;
+}
+
+nav {
+  flex-wrap: nowrap !important;
+  margin-top: 4%;
+  width: 90%;
+}
+
+ul {
+  list-style-type: none;
+  width: 40%;
+}
+ul li {
+  font-size: 30px;
+  margin: 0 0.2rem;
+  width: 30%;
+}
+ul li a {
+  font-weight: normal;
+  text-transform: uppercase;
+  margin: 0 0.4rem;
+}
+ul li a:hover {
+  font-weight: bold;
+  margin: 0 0.2rem;
+  text-decoration: underline;
+}
+
+.banner {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 80% auto;
+  row-gap: 0;
+  height: 110vh;
+}
+
+.banner_info, .banner_text, .banner_btn, .banner_arrow {
+  display: flex;
+}
+
+.banner_info {
+  flex-flow: row wrap;
+  width: 50%;
+  margin: auto;
+}
+
+.banner_text {
+  flex-flow: row wrap;
+}
+.banner_text p {
+  text-align: center;
+}
+
+.banner_btn {
+  margin-top: 0.7rem;
+}
+.banner_btn .btn {
+  font-size: 20px;
+  font-weight: normal;
+  padding: 1rem 2.5rem;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.4), rgba(177, 19, 19, 0.6235294118));
+}
+.banner_btn .btn:hover {
+  background: linear-gradient(90deg, rgb(255, 255, 255), #b11313);
+}
+
+section {
+  margin: 20vh 0;
+  padding: 0 7%;
+}
+section h2 {
+  font-size: 36px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 4vh;
+}
+section p {
+  text-align: justify;
+}
+
+.row_card {
+  margin-top: 10vh;
+}
+.row_card h4 {
+  text-align: center;
+  margin-top: 4vh;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.section_text h2 {
+  position: relative;
+}
+.section_text img {
+  position: absolute;
+  top: -11vh;
+  left: 7.5%;
+  z-index: 8;
+  width: 140px;
+}
+
+#allies {
+  position: relative;
+}
+#allies .bat {
+  position: absolute;
+  top: -30%;
+  right: -10%;
+  z-index: 7;
+}
+
+#league {
+  position: relative;
+  margin-bottom: 0 !important;
+}
+#league p {
+  margin-bottom: 10vh;
+}
+#league .league_carousel {
+  background-color: #000;
+  width: 99vw;
+  position: relative;
+  left: -14vw;
+}
+#league .league_carousel img {
+  width: 100%;
+}
+
+#multimedia {
+  margin: 0 !important;
+}/*# sourceMappingURL=style.css.map */
